syntax = "proto3";

option csharp_namespace = "TestProject.Grpc.Contracts";

package TestProject;

import "google/protobuf/empty.proto";

service SubTestEntityService {
	rpc CreateSubTestEntityAsync(CreateSubTestEntityRequest) returns (CreateSubTestEntityResponse);

	rpc GetSubTestEntityByIdAsync(GetSubTestEntityByIdRequest) returns (GetSubTestEntityByIdResponse);

	rpc UpdateSubTestEntityNameAsync(UpdateSubTestEntityNameRequest) returns (UpdateSubTestEntityNameResponse);

	rpc DeleteSubTestEntityAsync(DeleteSubTestEntityRequest) returns (google.protobuf.Empty);
}



message CreateSubTestEntityRequest {
	string name = 1;
	int32 testEntityId = 2;	
}

message CreateSubTestEntityResponse {
	int32 id = 1;
	string name = 2;
	int32 testEntityId = 3;
}



message GetSubTestEntityByIdRequest {
	int32 id = 1;
}

message GetSubTestEntityByIdResponse {
	int32 id = 1;
	string name = 2;
	int32 testEntityId = 3;
}



message UpdateSubTestEntityNameRequest {
	int32 id = 1;
	string newName = 2;
}

message UpdateSubTestEntityNameResponse {
	int32 id = 1;
	string name = 2;
	int32 testEntityId = 3;
}

message DeleteSubTestEntityRequest {
	int32 id = 1;
}